@@ -1,3 +1,8 @@
+2012-12-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/39464
+	* gcc.dg/pr39464.c: New test.
+
 2012-12-18  Ian Lance Taylor  <iant@google.com>
 
 	PR go/55201
