@@ -1,3 +1,10 @@
+2012-12-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/39464
+	* c-typeck.c (convert_for_assignment): For -Wpointer-sign
+	warning require that both c_common_unsigned_type as well as
+	c_common_signed_type is the same for both mvl and mvr types.
+
 2012-11-16  Diego Novillo  <dnovillo@google.com>
 
 	Adjust for new vec API (http://gcc.gnu.org/wiki/cxx-conversion/cxx-vec)
